--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Webpack App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"></head>
-  <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+    <body>
     <h1>asdasd</h1>
   <script src="bundle.js"></script></body>
 </html>
